--- a/public/css/app.css
+++ b/public/css/app.css
@@ -228,7 +228,7 @@ header{
     /* align-items: center; */
     justify-content: center;
     padding-left: 30px;
-    padding-top: 30px;
+    padding-top: 20px;
     padding-right: 30px;
     gap: 10px;
     /* justify-content: space-between; */
@@ -249,21 +249,107 @@ header{
 .whychoose1 button{
     width: 15vw;
     padding: 10px 20px;
-  
-    
-    
+    border-radius: 30px;
+    border: none;
+    background-color: #d63636;
+    color: aliceblue;
+    margin-left: 3vw;
+    font-weight: 600;
 }
 .whychoose2{
-    background-color: aqua;
+    /* background-color: aqua; */
+    background-color: #ffffff;
     height: 90%;
+    display: flex;
+    gap: 5vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
+
+.whychoose2 i{
+    font-size: 40px;
+    color: #cf1313;
+    background-color: #fcf2f2;
+    border-radius: 50%;
+    padding: 20px;
+    padding-top: 12px;
+    
+}
+.whychoose2 h2{
+    font-size: 20px;
+    font-weight: bold;
+    width: 75%;
+    text-align: center;
+    
+} 
+.whychoose2 p{
+    width: 70%;
+    font-size: 15px;
+}   
 .whychoose3{
-    background-color: blueviolet;
+    /* background-color: blueviolet; */
+    background-color: #ffffff;
     height: 90%;
+    display: flex;
+    gap: 5vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
+.whychoose3 i{
+    font-size: 40px;
+    color: #cf1313;
+    background-color:#fcf2f2;
+    border-radius: 50%;
+    padding: 20px;
+    padding-top: 12px;
+    
+}
+.whychoose3 h2{
+    font-size: 20px;
+    font-weight: bold;
+    width: 75%;
+    text-align: center;
+    
+} 
+.whychoose3 p{
+    width: 70%;
+    font-size: 15px;
+    text-align: center;
+}   
 .whychoose4{
-    background-color: bisque;
+    /* background-color: bisque; */
+    background-color: #ffffff;
+    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
+    
     height: 90%;
+    display: flex;
+    gap: 5vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
+.whychoose4 i{
+    font-size: 40px;
+    color: #cf1313;
+    background-color:#fcf2f2;
+    border-radius: 50%;
+    padding: 20px;
+    padding-top: 12px;
+    
+}
+.whychoose4 h2{
+    font-size: 20px;
+    font-weight: bold;
+    width: 75%;
+    text-align: center;
+    
+} 
+.whychoose4 p{
+    width: 70%;
+    font-size: 15px;
+    text-align: center;
+}   
 
 
