--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18,7 +18,7 @@ nav{
     width: 100%;
     height: 18vh;
     background-color: white;
-    
+   
 }
 
 nav h1{
@@ -350,6 +350,70 @@ header{
     width: 70%;
     font-size: 15px;
     text-align: center;
-}   
+}
+.Numbers{
+    height: 65vh;
+    width: 100%;
+    background-color: #cf1313;
+    background-image: url(../images/stats-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: cover;
+    
+    
+} 
+.opacity{
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.6;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16vw;
+}
+.static{
+    display: flex;
+    flex-direction: column;
+    
+
+}
+.static h1{
+    font-weight: bold;
+    font-size: 50px;
+    color: rgb(255, 255, 255);
+}
+.static p{
+    color: rgb(255, 255, 255);
+    font-weight: 200;
+    text-align: center;
+}
+.Menu{
+    width: 100%;
+    height: 200vh;
+    background-color: aqua;
+} 
+.content-menu{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 10vh;
+    gap: 10px;
+}
+.content-menu h1{
+    font-family: Amatic;
+}
+.content-menu h1 span{
+    font-family: Amatic;
+    color: #cf1313;
+    font-weight: 10px;
+} 
+.Food{
+    width: 100%;
+    height: 160vh;
+    margin-top: 10vh;
+    background-color: aquamarine;
+    margin-inline: 10vw; 
+}
 
 
